--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -4368,7 +4368,7 @@ input[type="submit"].btn.btn-mini {
 }
 
 .navbar-inner {
-  min-height: 40px;
+  height: 45px;
   padding-right: 20px;
   padding-left: 20px;
   background-color: #fafafa;
